--- a/frontend/package.json
+++ b/frontend/package.json
@@ -4,17 +4,17 @@
   "main": "index.js",
   "license": "MIT",
   "devDependencies": {
-    "@babel/core": "^7.8.3",
-    "@babel/plugin-proposal-class-properties": "^7.8.3",
-    "@babel/preset-env": "^7.8.3",
-    "@babel/preset-react": "^7.8.3",
-    "parcel-bundler": "^1.12.4"
+    "@babel/core": "7.8.3",
+    "@babel/plugin-proposal-class-properties": "7.8.3",
+    "@babel/preset-env": "7.8.3",
+    "@babel/preset-react": "7.8.3",
+    "parcel-bundler": "1.12.4"
   },
   "dependencies": {
-    "@babel/polyfill": "^7.8.3",
-    "axios": "^0.19.1",
-    "react": "^16.12.0",
-    "react-dom": "^16.12.0"
+    "@babel/polyfill": "7.8.3",
+    "axios": "0.19.1",
+    "react": "16.12.0",
+    "react-dom": "16.12.0"
   },
   "scripts": {
     "start": "parcel ./src/index.html",
